<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bjh-1x-Ydv">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="ufC-wZ-h7g">
            <objects>
                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="AppGuard_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uzK-wg-xQs">
                                <rect key="frame" x="0.0" y="20" width="375" height="583"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="oCv-uK-Wjs">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="vqR-g1-DuF"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Mandatory"/>
                                            <segment title="Recommanded"/>
                                            <segment title="Changelog"/>
                                        </segments>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <action selector="didChangedGuardType:" destination="vXZ-lx-hvc" eventType="valueChanged" id="oMP-uC-30X"/>
                                        </connections>
                                    </segmentedControl>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lQ9-ew-zTx">
                                        <rect key="frame" x="0.0" y="64" width="375" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="Xdf-2D-wFj"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Default"/>
                                            <segment title="Bottom"/>
                                            <segment title="Slide in"/>
                                        </segments>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <action selector="didChangedTransitionType:" destination="vXZ-lx-hvc" eventType="valueChanged" id="xNz-l3-5U6"/>
                                        </connections>
                                    </segmentedControl>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGy-RX-rXi">
                                        <rect key="frame" x="0.0" y="128" width="375" height="77.5"/>
                                        <state key="normal" title="Show">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="didTapShowButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="UEq-R4-Wlu"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2GG-Wg-R0a">
                                        <rect key="frame" x="0.0" y="225.5" width="375" height="77.5"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Fetch local config"/>
                                        <connections>
                                            <action selector="didTapFetchLocalConfig:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="X12-qf-iki"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZfX-W4-qbx">
                                        <rect key="frame" x="0.0" y="323" width="375" height="260"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Retrieve remote config (Firebase)"/>
                                        <connections>
                                            <action selector="didTapRetrieveUserConfigButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="yN2-wU-U0b"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.37488325682083679" blue="0.3816489495731602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="uzK-wg-xQs" firstAttribute="leading" secondItem="A8X-5E-r7V" secondAttribute="leading" id="I3q-L2-yju"/>
                            <constraint firstItem="A8X-5E-r7V" firstAttribute="trailing" secondItem="uzK-wg-xQs" secondAttribute="trailing" id="eUr-FP-dAm"/>
                            <constraint firstItem="A8X-5E-r7V" firstAttribute="bottom" secondItem="uzK-wg-xQs" secondAttribute="bottom" id="gRE-f9-dNV"/>
                            <constraint firstItem="uzK-wg-xQs" firstAttribute="top" secondItem="A8X-5E-r7V" secondAttribute="top" constant="20" id="npf-EE-Haq"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="A8X-5E-r7V"/>
                    </view>
                    <navigationItem key="navigationItem" id="veo-Xv-Xdi"/>
                    <connections>
                        <outlet property="ibDialogTypeSegmentedControl" destination="oCv-uK-Wjs" id="IU8-TV-cIx"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="453.60000000000002" y="73.313343328335833"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="2Ik-6Y-8CW">
            <objects>
                <navigationController id="Bjh-1x-Ydv" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="PYa-bs-6X7">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="o5P-Gk-rWG"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wt2-t2-VT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-402" y="55"/>
        </scene>
    </scenes>
</document>
