...
      versionCode : \(AppGuard.default.configuration.versionCode) \n
      """

      let alertController = UIAlertController(title: "Configuration updated from Firebase 👌",
                                              message: message,
                                              preferredStyle: .alert)
      let dismissItem = UIAlertAction(title: "Ok", style: .default, handler: nil)
      alertController.addAction(dismissItem)
      self.present(alertController, animated: true, completion: nil)
    }
  }  
}

...
